--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@
 
   @media only screen and (max-width: 640px) {
    body{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
    }
    .clip{
     background-color:var(--white,white) ;
