--- a/style.css
+++ b/style.css
@@ -99,6 +99,13 @@
     .cli{
     margin-top: 30px;
     }
+    .bg{  
+      background-image: url("/images/homepage-hero.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      max-height: 350px;
+     }
 
    }
   
